--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
+.env
 .vscode
 .DS_Store
 .exercises
 .utils
+.next
+next-env.d.ts
+
 node_modules
-REQUIREMENTS.md
-template.md
-dist
-.env
 pocketbase
+dist
+
+template.md
+NOTICE.md
+
+17-*.md
+18.md
+18-*.md
